# CUDA-sudoku-solver

./: .gitignore  CMakeLists.txt  README.md
src/device/: solver_kernel.cu
src/host/: main.cpp  utils.cpp
src/include/: device_utils.h  host_utils.h
sudoku/: sudoku_2.txt  sudoku_6.txt
